<resources>
    <string name="app_name">StorePrime</string>
    <string name="auth">Авторизация</string>
    <string name="email">Введите email</string>
    <string name="email_title">Email</string>
    <string name="password_title">Пароль</string>
    <string name="password">Введите пароль</string>
    <string name="login">Войти</string>
    <string name="not_registered">Еще не зарегистрированы?</string>
    <string name="register_as_customer"><u>Зарегистрироваться как покупатель</u></string>
    <string name="else_word">ИЛИ</string>
    <string name="register_as_seller"><u>Зарегистрироваться как продавец</u></string>
    <string name="register">Регистрация</string>
    <string name="name_title">Имя</string>
    <string name="name">Введите имя</string>
    <string name="surname_title">Фамилия</string>
    <string name="surname">Введите фамилию</string>
    <string name="birth_title">Дата рождения</string>
    <string name="female">Женский</string>
    <string name="male">Мужской</string>
    <string name="address_title">Адрес</string>
    <string name="address">Страна, Город, Улица, Дом, Квартира</string>
    <string name="gender_title">Пол</string>
    <string name="year">ГГГГ-ММ-ДД</string>
    <string name="number">+7 (___) ____-__-__</string>
    <string name="number_title">Телефон</string>
    <string name="already_have_account">Уже есть аккаунт?</string>
    <string name="signup_action">Зарегистрироваться</string>
    <string name="login_underlined"><u>Войти</u></string>
    <string name="company_name_title">Название</string>
    <string name="company_name">Введите название</string>
    <string name="document">Введите ИНН</string>
    <string name="document_title">ИНН</string>
    <string name="desc_title">Описание</string>
    <string name="desc">Введите описание магазина</string>
    <string name="address_seller">Страна, Город</string>
    <string name="error_check_connection">Проверьте подключение к интернету</string>
    <string name="success_sign_up">Регистрация прошла успешно</string>
    <string name="login_success">Успешно</string>
    <string name="validation_error_name">Имя должно состоять от 1 до 100 символов, не включать цифры и специальные символы</string>
    <string name="validation_error_surname">Фамилия должна состоять от 1 до 100 символов, не включать цифры и специальные символы</string>
    <string name="validation_error_email">Введите корректную почту</string>
    <string name="validation_error_password">Пароль должен состоять от 8 до 64 знаков, включать хотя бы 1 строчную латинскую букву, 1 заглавную букву, 1 цифру, 1 специальный символ</string>
    <string name="validation_error_date">Дата рождения должна вводиться в формате: ГГГГ-ММ-ДД</string>
    <string name="validation_error_number">Телефон должен состоять из 11 цифр</string>
    <string name="validation_error_gender">Выберите пол</string>
    <string name="validation_error_address">Адрес должен вводиться в формате: страна, город, улица, дом, квартира (опционально)</string>
    <string name="validation_error_description">Описание должно состоять от 1 до 100 символов</string>
    <string name="validation_error_seller_name">Название должно состоять от 1 до 100 символов, не включать цифры и специальные символы</string>
    <string name="validation_error_INN">ИНН должно состоять из 10 цифр</string>
    <string name="validation_error_location">Адрес должен вводиться в формате: страна, город </string>
    <string name="validation_error">Проверьте корректность введенных данных</string>
    <string name="validation_error_empty_email">Введите почту</string>
    <string name="validation_error_empty_password">Введите пароль</string>
    <string name="buy_fast_title">Успейте купить</string>
    <string name="product_senstational">Тушь Sensational</string>
    <string name="product_price">1000₽</string>
    <string name="like_title">Возможно, вам понравится</string>
    <string name="сheck_connection">Проверьте подключение к интернету</string>
    <string name="successful_cart_add">Товар был добавлен в корзину</string>
    <string name="try_again">Попробовать еще раз</string>
    <string name="product_not_available">Товара нет в наличии</string>
    <string name="error_access_denied">Необходимо войти в аккаунт</string>
    <string name="search_hint">Поиск</string>
    <string name="title_products">Товары</string>
    <string name="filters_title">Фильтры</string>
    <string name="empty_list">Товары не найдены</string>
    <string name="category_title">Категория</string>
    <string name="category_toys">Игрушки</string>
    <string name="category_furniture">Мебель</string>
    <string name="category_products">Продукты</string>
    <string name="category_zoo">Зоотовары</string>
    <string name="category_sport">Спорт</string>
    <string name="category_home">Бытовое</string>
    <string name="category_school">Школа</string>
    <string name="category_jew">Ювелирные</string>
    <string name="category_garden">Сад и дача</string>
    <string name="category_health">Здоровье</string>
    <string name="category_travel">Путешествия</string>
    <string name="category_books">Книги</string>
    <string name="category_tech">Электроника</string>
    <string name="menu_main">Main</string>
    <string name="menu_catalog">Catalog</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_person">Person</string>
    <string name="category_car">Авто</string>
    <string name="params_title">Параметры</string>
    <string name="add_to_cart_button">Добавить в корзину</string>
    <string name="delete_from_cart_button">Удалить из корзины</string>
    <string name="error_delete_product_from_cart">Ошибка! Товар не был удален</string>
    <string name="button_buy">Купить</string>
    <string name="amount_default">1</string>
    <string name="empty_cart">Корзина пуста</string>
    <string name="successful_order_complete">Заказ был успешно совершен</string>
    <string name="status_created">Создан</string>
    <string name="status_transiting">Доставляется</string>
    <string name="status_delivered">Готов к получению</string>
    <string name="status_cancelled">Отменен</string>
    <string name="balance_title">Финансы</string>
    <string name="orders_title">Заказы</string>
    <string name="quit"><u>Выйти</u></string>
    <string name="add_balance"><u>Пополнить баланс</u></string>
    <string name="settings_title">Управление</string>
    <string name="enter_account">Войти в аккаунт</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="cart_title_basket">Корзина</string>
    <string name="empty_products">Товаров нет</string>
    <string name="button_add">Добавить</string>
    <string name="add_photo">Добавить фотографию</string>
    <string name="price_title">Цена</string>
    <string name="price_hint">Введите цену</string>
    <string name="desc_product">Введите описание</string>
    <string name="successfull_product_add">Товар был успешно добавлен</string>
    <string name="error_item_not_found">Товар не был найден</string>
    <string name="error_category_not_found">Категория не была найдена</string>
    <string name="error_customer_not_found">Пользователя не существует</string>
    <string name="error_photo_not_found">Фото не было найдено</string>
    <string name="error_product_not_found">Продукта не существует</string>
    <string name="error_seller_not_found">Продавец не существует</string>
    <string name="error_disparate_data">Данные повреждены</string>
    <string name="error_payment_impossible">Недостаток средств</string>
    <string name="error_access_denie">Доступ запрещен</string>
    <string name="error_email_exist">Такой email уже существует</string>
    <string name="error_validation">Проверьте введенные данные</string>
    <string name="error_server_error">Сервер не доступен</string>
</resources>
