<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mainPageFragment"
            android:icon="@drawable/home_icon"
            android:title="@string/menu_main" />
        <item
            android:id="@+id/catalogFragment"
            android:icon="@drawable/catalog_icon"
            android:title="@string/menu_catalog" />
        <item
            android:id="@+id/cartFragment"
            android:icon="@drawable/cart_icon"
            android:title="@string/menu_cart" />
        <item
            android:id="@+id/userFragment"
            android:icon="@drawable/profile_icon"
            android:title="@string/menu_person" />
    </group>
</menu>
