<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="46dp"
            android:layout_gravity="center"
            android:src="@drawable/logo"
            tools:ignore="ContentDescription" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:paddingHorizontal="24dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="80dp">

            <TextView
                android:id="@+id/textView_auth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/exo2_bold"
                android:text="@string/register"
                android:textColor="?attr/colorSecondary"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView_name_title"
                style="@style/TextViewAuthTitleStyle"
                android:layout_marginTop="36dp"
                android:text="@string/name_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView_auth" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInput_name"
                style="@style/TextInputAuthStyle"
                android:layout_marginTop="6dp"
                app:layout_constraintStart_toStartOf="@id/textView_name_title"
                app:layout_constraintTop_toBottomOf="@+id/textView_name_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_name"
                    style="@style/EditTextAuthStyle"
                    android:hint="@string/name"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView_surname_title"
                style="@style/TextViewAuthTitleStyle"
                android:layout_marginTop="36dp"
                android:text="@string/surname_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInput_name" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInput_surname"
                style="@style/TextInputAuthStyle"
                android:layout_marginTop="6dp"
                app:layout_constraintStart_toStartOf="@id/textView_surname_title"
                app:layout_constraintTop_toBottomOf="@+id/textView_surname_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_surname"
                    style="@style/EditTextAuthStyle"
                    android:hint="@string/surname"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView_birth_title"
                style="@style/TextViewAuthTitleStyle"
                android:layout_marginTop="36dp"
                android:text="@string/birth_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInput_surname" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInput_birth"
                style="@style/TextInputAuthStyle"
                android:layout_marginTop="6dp"
                app:layout_constraintStart_toStartOf="@id/textView_birth_title"
                app:layout_constraintTop_toBottomOf="@+id/textView_birth_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_birth"
                    style="@style/EditTextAuthStyle"
                    android:hint="@string/year"
                    android:inputType="date" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView_gender_title"
                style="@style/TextViewAuthTitleStyle"
                android:layout_marginTop="36dp"
                android:text="@string/gender_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInput_birth" />

            <RadioGroup
                android:id="@+id/radioGroup_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/textView_gender_title">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/radioButton_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="?attr/colorSecondaryVariant"
                    android:fontFamily="@font/exo2_extralight"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/male"
                    android:textColor="?attr/colorSecondary"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radioButton_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:buttonTint="?attr/colorSecondaryVariant"
                    android:fontFamily="@font/exo2_extralight"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/female"
                    android:textColor="?attr/colorSecondary"
                    android:textSize="20sp" />

            </RadioGroup>

            <TextView
                android:id="@+id/textView_address_title"
                style="@style/TextViewAuthTitleStyle"
                android:layout_marginTop="36dp"
                android:text="@string/address_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/radioGroup_gender" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInput_address"
                style="@style/TextInputAuthStyle"
                android:layout_marginTop="6dp"
                app:layout_constraintStart_toStartOf="@id/textView_address_title"
                app:layout_constraintTop_toBottomOf="@+id/textView_address_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_address"
                    style="@style/EditTextAuthStyle"
                    android:hint="@string/address"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView_number_title"
                style="@style/TextViewAuthTitleStyle"
                android:layout_marginTop="36dp"
                android:text="@string/number_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInput_address" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInput_number"
                style="@style/TextInputAuthStyle"
                android:layout_marginTop="6dp"
                app:layout_constraintStart_toStartOf="@id/textView_number_title"
                app:layout_constraintTop_toBottomOf="@+id/textView_number_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_number"
                    style="@style/EditTextAuthStyle"
                    android:hint="@string/number"
                    android:inputType="phone|number" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView_email_title"
                style="@style/TextViewAuthTitleStyle"
                android:layout_marginTop="36dp"
                android:text="@string/email_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInput_number" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInput_email"
                style="@style/TextInputAuthStyle"
                android:layout_marginTop="6dp"
                app:layout_constraintStart_toStartOf="@id/textView_email_title"
                app:layout_constraintTop_toBottomOf="@+id/textView_email_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_email"
                    style="@style/EditTextAuthStyle"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView_password_title"
                style="@style/TextViewAuthTitleStyle"
                android:layout_marginTop="36dp"
                android:text="@string/password_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInput_email" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInput_password"
                style="@style/TextInputAuthStyle"
                android:layout_marginTop="6dp"
                app:layout_constraintStart_toStartOf="@id/textView_password_title"
                app:layout_constraintTop_toBottomOf="@id/textView_password_title"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_password"
                    style="@style/EditTextAuthStyle"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_login"
                style="@style/MainButtonStyle"
                android:layout_marginTop="55dp"
                android:text="@string/signup_action"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInput_password" />


            <TextView
                android:id="@+id/textView_registered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="55dp"
                android:fontFamily="@font/exo2_extralight"
                android:text="@string/already_have_account"
                android:textColor="?attr/colorPrimarySurface"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button_login" />

            <TextView
                android:id="@+id/textView_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/exo2_extralight"
                android:text="@string/login_underlined"
                android:textColor="?attr/colorSecondaryVariant"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@id/textView_registered"
                app:layout_constraintTop_toTopOf="@id/textView_registered" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView_registered">

                <View
                    android:id="@+id/view_line_first"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginEnd="25dp"
                    android:background="?attr/colorPrimarySurface"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/textView_else"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView_else"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/exo2_extralight"
                    android:text="@string/else_word"
                    android:textColor="?attr/colorPrimarySurface"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/view_line_second"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginStart="25dp"
                    android:background="?attr/colorPrimarySurface"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/textView_else"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView_signUp_seller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/exo2_extralight"
                android:text="@string/register_as_seller"
                android:textColor="?attr/colorSecondaryVariant"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_line" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
